[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lunaeph"
version = "0.1.0"
description = "A thin western astrology library on top of taiyin-ephemeris-semi-analytic"
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
license-files = ["LICENSE"]
keywords = ["astrology", "ephemeris", "astronomy", "chart", "horoscope"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Other/Nonlisted Topic",
    "Typing :: Typed",
]

dependencies = [
    "taiyin-ephemeris-semi-analytic>=0.2.0",
]

[project.urls]
Homepage = "https://github.com/RedSC1/lunaeph"
Repository = "https://github.com/RedSC1/lunaeph.git"

[tool.setuptools.packages.find]
include = ["lunaeph*"]
